--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,11 @@ dependencies:
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
   stream_transform: ^2.1.1
+  cached_network_image: ^3.4.1
+  flutter_secure_storage: ^9.2.4
+  jwt_decode: ^0.3.1
+  jwt_decoder: ^2.0.1
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
