Refactor project structure and update naming conventions. Changed project name from 'urgut_please' to 'urgut_place' across all files. Enhanced analysis options by ignoring specific analyzer errors. Removed unused authentication services and updated service imports for consistency. Improved state management in various features and adjusted UI components for better organization.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: urgut_please
-description: "A new Flutter project."
+name: urgut_place
+description: "Shop finding App."
 publish_to: 'none'
 version: 1.0.0+1
 environment:
