--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -1,6 +1,6 @@
 # flutter pub run flutter_launcher_icons
 flutter_launcher_icons:
-  image_path: "assets/logo.png"
+  image_path: "assets/logo.jpg"
 
   android: "launcher_icon"
   min_sdk_android: 21
