--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: shops
 description: "A new Flutter project."
 publish_to: 'none'
-version: 1.0.4+7
+version: 1.0.7+10
 
 environment:
   sdk: ^3.9.2
@@ -26,6 +26,7 @@ dependencies:
   cached_network_image: ^3.4.1
   url_launcher: ^6.3.2
   carousel_slider: ^5.1.1
+  package_info_plus: ^8.1.1
 
 dev_dependencies:
   flutter_test:
